--- a/app/src/main/res/layout/activity_team_members.xml
+++ b/app/src/main/res/layout/activity_team_members.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="@dimen/padding_standard"
+        android:padding="@dimen/padding_standard"
+        android:background="@color/colorAccent"
+        android:layout_alignParentTop="true"
+        android:id="@+id/teamNameContainer"
         >
 
         <EditText
@@ -36,6 +39,7 @@
         android:id="@+id/teamMembersList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:layout_below="@id/teamNameContainer"/>
 
-</LinearLayout>
+</RelativeLayout>
