--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,8 @@
     <dimen name="padding_standard">16dp</dimen>
     <dimen name="login_text_size">18sp</dimen>
     <dimen name="type_text_size">14sp</dimen>
+    <dimen name="padding_half">8dp</dimen>
+    <dimen name="padding_double">32dp</dimen>
+    <dimen name="detail_avatar_size">144dp</dimen>
+    <dimen name="detail_text_size">16sp</dimen>
 </resources>
