--- a/app/src/main/res/layout/activity_member.xml
+++ b/app/src/main/res/layout/activity_member.xml
@@ -7,66 +7,91 @@
     android:orientation="vertical"
     tools:context="com.raywenderlich.android.octomembers.ui.member.MemberActivity">
 
-    <ImageView
-        android:id="@+id/memberAvatar"
-        android:layout_width="@dimen/detail_avatar_size"
-        android:layout_height="@dimen/detail_avatar_size"
-        android:contentDescription="@string/contentDescription_teamMemberAvatar"
-        tools:scr="@drawable/ic_launcher_backgroud"></ImageView>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/detail_avatar_container_size"
+        android:background="@color/colorAccent"
+        android:gravity="center">
+
+        <ImageView
+            android:id="@+id/memberAvatar"
+            android:layout_width="@dimen/detail_avatar_size"
+            android:layout_height="@dimen/detail_avatar_size"
+            android:contentDescription="@string/contentDescription_teamMemberAvatar"
+            tools:scr="@drawable/ic_launcher_backgroud"></ImageView>
+    </RelativeLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            style="@style/member_info"
-            android:text="@string/label_name"></TextView>
-        <TextView
-            style="@style/member_info"
-            android:id="@+id/memberName"></TextView>
-    </LinearLayout>
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            style="@style/member_info"
-            android:text="@string/label_login"></TextView>
-        <TextView
-            style="@style/member_info"
-            android:id="@+id/memberLogin"></TextView>
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            style="@style/member_info"
-            android:text="@string/label_company"></TextView>
-        <TextView
-            style="@style/member_info"
-            android:id="@+id/memberCompany"></TextView>
-    </LinearLayout>
+            <TextView
+                style="@style/member_label"
+                android:text="@string/label_name"></TextView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            style="@style/member_info"
-            android:text="@string/label_email"></TextView>
-        <TextView
-            style="@style/member_info"
-            android:id="@+id/memberEmail"></TextView>
-    </LinearLayout>
+            <TextView
+                android:id="@+id/memberName"
+                style="@style/member_info"></TextView>
+        </LinearLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TextView
-            style="@style/member_info"
-            android:text="@string/label_type"></TextView>
-        <TextView
-            style="@style/member_info"
-            android:id="@+id/memberType"></TextView>
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
+            <TextView
+                style="@style/member_label"
+                android:text="@string/label_login"></TextView>
+
+            <TextView
+                android:id="@+id/memberLogin"
+                style="@style/member_info"></TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                style="@style/member_label"
+                android:text="@string/label_company"></TextView>
+
+            <TextView
+                android:id="@+id/memberCompany"
+                style="@style/member_info"></TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                style="@style/member_label"
+                android:text="@string/label_email"></TextView>
+
+            <TextView
+                android:id="@+id/memberEmail"
+                style="@style/member_info"></TextView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                style="@style/member_label"
+                android:text="@string/label_type"></TextView>
+
+            <TextView
+                android:id="@+id/memberType"
+                style="@style/member_info"></TextView>
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
