--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="padding_double">32dp</dimen>
     <dimen name="detail_avatar_size">144dp</dimen>
     <dimen name="detail_text_size">16sp</dimen>
+    <dimen name="detail_avatar_container_size">200dp</dimen>
 </resources>
