--- a/app/src/main/res/layout/activity_member.xml
+++ b/app/src/main/res/layout/activity_member.xml
@@ -7,19 +7,32 @@
     android:orientation="vertical"
     tools:context="com.raywenderlich.android.octomembers.ui.member.MemberActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/detail_avatar_container_size"
         android:background="@color/colorAccent"
-        android:gravity="center">
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/memberAvatar"
             android:layout_width="@dimen/detail_avatar_size"
             android:layout_height="@dimen/detail_avatar_size"
             android:contentDescription="@string/contentDescription_teamMemberAvatar"
+            android:padding="@dimen/padding_standard"
             tools:scr="@drawable/ic_launcher_backgroud"></ImageView>
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/memberName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:padding="@dimen/padding_standard"
+            android:maxLines="3"
+            android:textSize="@dimen/detail_name_text"
+            tools:text="FirstName LastName"
+            />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,24 +48,11 @@
 
             <TextView
                 style="@style/member_label"
-                android:text="@string/label_name"></TextView>
-
-            <TextView
-                android:id="@+id/memberName"
-                style="@style/member_info"></TextView>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                style="@style/member_label"
-                android:text="@string/label_login"></TextView>
+                android:text="@string/label_login" />
 
             <TextView
                 android:id="@+id/memberLogin"
-                style="@style/member_info"></TextView>
+                style="@style/member_info" />
         </LinearLayout>
 
         <LinearLayout
@@ -61,11 +61,11 @@
 
             <TextView
                 style="@style/member_label"
-                android:text="@string/label_company"></TextView>
+                android:text="@string/label_company" />
 
             <TextView
                 android:id="@+id/memberCompany"
-                style="@style/member_info"></TextView>
+                style="@style/member_info" />
         </LinearLayout>
 
         <LinearLayout
@@ -74,11 +74,11 @@
 
             <TextView
                 style="@style/member_label"
-                android:text="@string/label_email"></TextView>
+                android:text="@string/label_email" />
 
             <TextView
                 android:id="@+id/memberEmail"
-                style="@style/member_info"></TextView>
+                style="@style/member_info" />
         </LinearLayout>
 
         <LinearLayout
@@ -87,11 +87,11 @@
 
             <TextView
                 style="@style/member_label"
-                android:text="@string/label_type"></TextView>
+                android:text="@string/label_type" />
 
             <TextView
                 android:id="@+id/memberType"
-                style="@style/member_info"></TextView>
+                style="@style/member_info" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
