--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,7 +9,7 @@
   </style>
 
   <style name="member_info" parent="AppTheme">
-    <item name="android:layout_width">wrap_content</item>
+    <item name="android:layout_width">0dp</item>
     <item name="android:layout_height">wrap_content</item>
     <item name="android:textSize">@dimen/detail_text_size</item>
     <item name="android:paddingTop">@dimen/padding_half</item>
