--- a/app/src/main/res/layout/activity_team_members.xml
+++ b/app/src/main/res/layout/activity_team_members.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".ui.teammembers.TeamMembersActivity">
 
     <LinearLayout
         android:id="@+id/teamNameContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
         android:background="@color/teamMembersHeader"
         android:orientation="horizontal"
-        android:padding="@dimen/padding_standard">
+        android:padding="@dimen/padding_standard"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <EditText
             android:id="@+id/teamName"
@@ -35,9 +36,13 @@
     </LinearLayout>
 
     <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/teamNameContainer">
+        android:id="@+id/framelayout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/teamNameContainer">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/teamMembersList"
@@ -55,25 +60,35 @@
             android:visibility="gone"
             tools:visibility="visible" />
 
-        <ImageView
-            android:id="@+id/icRunning"
-            android:layout_width="@dimen/list_item_height"
-            android:layout_height="@dimen/list_item_height"
-            android:layout_centerHorizontal="true"
-            android:layout_margin="4dp"
-            android:adjustViewBounds="true"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_run"
-
-            tools:srcCompat="@tools:sample/avatars" />
-
-        <TextView
-            android:id="@+id/emptyState"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/empty_state_format"
-            android:visibility="invisible"
-            tools:visibility="visible" />
-        <!--use razeware in the search to see the expected empty message-->
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/margin_top_not_found_message">
+
+            <ImageView
+                android:id="@+id/icRunning"
+                android:layout_width="@dimen/detail_avatar_size"
+                android:layout_height="@dimen/detail_avatar_size"
+                android:layout_centerInParent="true"
+                android:contentDescription="@string/error_retrieving_team"
+                android:src="@drawable/ic_run"
+                android:visibility="invisible"
+                tools:srcCompat="@tools:sample/avatars"
+                tools:visibility="visible" />
+
+            <TextView
+                android:id="@+id/emptyState"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/icRunning"
+                android:layout_gravity="center"
+                android:layout_marginTop="60dp"
+                android:text="@string/empty_state_format"
+                android:textSize="@dimen/detail_name_text"
+                android:visibility="invisible"
+                tools:visibility="visible" />
+            <!--use razeware in the search to see the expected empty message-->
+        </RelativeLayout>
     </FrameLayout>
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
