--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="detail_text_size">16sp</dimen>
     <dimen name="detail_avatar_container_size">200dp</dimen>
     <dimen name="detail_name_text">24sp</dimen>
+    <dimen name="margin_top_not_found_message">-50dp</dimen>
 </resources>
