--- a/app/src/main/res/layout/list_item_team_member.xml
+++ b/app/src/main/res/layout/list_item_team_member.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,32 +9,31 @@
         android:id="@+id/teamMemberAvatar"
         android:layout_width="@dimen/list_item_height"
         android:layout_height="@dimen/list_item_height"
-        tools:srcCompat="@tools:sample/avatars"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:contentDescription="@string/contentDescription_teamMemberAvatar"/>
+        android:contentDescription="@string/contentDescription_teamMemberAvatar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:srcCompat="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/teamMemberLogin"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:padding="@dimen/padding_standard"
-        android:textSize="@dimen/login_text_size"
-        android:layout_toEndOf="@id/teamMemberAvatar"
-        android:layout_centerVertical="true"
+        android:layout_marginStart="@dimen/padding_standard"
+        android:layout_marginEnd="@dimen/padding_standard"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/teamMemberType"
+        app:layout_constraintStart_toEndOf="@+id/teamMemberAvatar"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="login" />
 
-  <TextView
-      android:id="@+id/teamMemberType"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:layout_toEndOf="@id/teamMemberLogin"
-      android:layout_alignParentEnd="true"
-      android:layout_marginStart="@dimen/padding_standard"
-      android:layout_marginEnd="@dimen/padding_standard"
-      android:textSize="@dimen/type_text_size"
-      android:layout_alignBaseline="@id/teamMemberLogin"
-      android:gravity="end"
-      android:text="TextView" />
+    <TextView
+        android:id="@+id/teamMemberType"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/teamMemberLogin"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="type" />
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
