--- a/app/src/main/res/layout/activity_member.xml
+++ b/app/src/main/res/layout/activity_member.xml
@@ -7,104 +7,142 @@
     android:layout_height="match_parent"
     tools:context="com.raywenderlich.android.octomembers.ui.member.MemberActivity">
 
-    <LinearLayout
-        android:id="@+id/avatarContainer"
+    <ImageView
+        android:id="@+id/memberAvatar"
+        android:layout_width="@dimen/detail_avatar_size"
+        android:layout_height="@dimen/detail_avatar_size"
+        android:contentDescription="@string/contentDescription_teamMemberAvatar"
+        android:padding="@dimen/padding_double"
+        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"
+        app:layout_constraintEnd_toEndOf="@id/infoVerticalGuideline"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:scr="@drawable/ic_launcher_backgroud" />
+
+    <TextView
+        android:id="@+id/memberName"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:maxLines="3"
+        android:padding="@dimen/padding_standard"
+        android:textSize="@dimen/detail_name_text"
+        app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/verticalGuideline"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="200dp"
+        tools:text="FirstName LastName" />
+
+    <TextView
+        android:id="@+id/labelLogin"
+        style="@style/member_label"
+        android:text="@string/label_login"
+        app:layout_constraintBottom_toTopOf="@+id/labelCompany"
+        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
+        app:layout_constraintTop_toBottomOf="@id/horizontalGuideline"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/labelCompany"
+        style="@style/member_label"
+        android:text="@string/label_company"
+        app:layout_constraintBottom_toTopOf="@+id/labelEmail"
+        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
+        app:layout_constraintTop_toBottomOf="@id/labelLogin"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@id/labelEmail"
+        style="@style/member_label"
+        android:text="@string/label_email"
+        app:layout_constraintBottom_toTopOf="@+id/labelType"
+        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
+        app:layout_constraintTop_toBottomOf="@id/labelCompany"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/labelType"
+        style="@style/member_label"
+        android:text="@string/label_type"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/infoVerticalGuideline"
+        app:layout_constraintTop_toBottomOf="@id/labelEmail"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/memberLogin"
+        style="@style/member_info"
+        app:layout_constraintBottom_toBottomOf="@id/memberCompany"
+        app:layout_constraintStart_toStartOf="@+id/infoVerticalGuideline"
+        app:layout_constraintTop_toBottomOf="@+id/horizontalGuideline"
+        app:layout_constraintVertical_chainStyle="packed"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/memberCompany"
+        style="@style/member_info"
+        android:layout_width="wrap_content"
+        app:layout_constraintBottom_toBottomOf="@id/memberEmail"
+        app:layout_constraintStart_toStartOf="@+id/infoVerticalGuideline"
+        app:layout_constraintTop_toBottomOf="@+id/memberLogin"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/memberEmail"
+        style="@style/member_info"
+        app:layout_constraintBottom_toBottomOf="@id/memberType"
+        app:layout_constraintStart_toStartOf="@+id/infoVerticalGuideline"
+        app:layout_constraintTop_toBottomOf="@+id/memberCompany"
+        tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/memberType"
+        style="@style/member_info"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/infoVerticalGuideline"
+        app:layout_constraintTop_toBottomOf="@+id/memberEmail"
+        tools:visibility="visible" />
+
+    <View
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/colorAccent"
-        android:gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/memberInfoContainer"
+        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/memberAvatar"
-            android:layout_width="@dimen/detail_avatar_size"
-            android:layout_height="@dimen/detail_avatar_size"
-            android:contentDescription="@string/contentDescription_teamMemberAvatar"
-            android:padding="@dimen/padding_double"
-            tools:scr="@drawable/ic_launcher_backgroud" />
-
-        <TextView
-            android:id="@+id/memberName"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:maxLines="3"
-            android:padding="@dimen/padding_standard"
-            android:textSize="@dimen/detail_name_text"
-            tools:text="FirstName LastName" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/memberInfoContainer"
+    <View
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/colorPrimary"
-        android:gravity="center"
-        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/avatarContainer">
+        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/memberLoginContainer">
 
-            <TextView
-                style="@style/member_label"
-                android:text="@string/label_login" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/verticalGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5" />
 
-            <TextView
-                android:id="@+id/memberLogin"
-                style="@style/member_info" />
-        </LinearLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/infoVerticalGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.4" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/memberCompanyContainer">
-
-            <TextView
-                style="@style/member_label"
-                android:text="@string/label_company" />
-
-            <TextView
-                android:id="@+id/memberCompany"
-                style="@style/member_info" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/memberEmailContainer">
-
-            <TextView
-                style="@style/member_label"
-                android:text="@string/label_email" />
-
-            <TextView
-                android:id="@+id/memberEmail"
-                style="@style/member_info" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/memberTypeContainer">
-
-            <TextView
-                style="@style/member_label"
-                android:text="@string/label_type" />
-
-            <TextView
-                android:id="@+id/memberType"
-                style="@style/member_info" />
-        </LinearLayout>
-    </LinearLayout>
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontalGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
