--- a/app/src/main/res/layout/activity_member.xml
+++ b/app/src/main/res/layout/activity_member.xml
@@ -7,23 +7,40 @@
     android:layout_height="match_parent"
     tools:context="com.raywenderlich.android.octomembers.ui.member.MemberActivity">
 
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/colorAccent"
+        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />
+
     <ImageView
         android:id="@+id/memberAvatar"
         android:layout_width="@dimen/detail_avatar_size"
         android:layout_height="@dimen/detail_avatar_size"
         android:contentDescription="@string/contentDescription_teamMemberAvatar"
         android:padding="@dimen/padding_double"
+        tools:scr="@drawable/ic_launcher_background"
         app:layout_constraintBottom_toTopOf="@id/horizontalGuideline"
         app:layout_constraintEnd_toEndOf="@id/infoVerticalGuideline"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:scr="@drawable/ic_launcher_backgroud" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/memberName"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_height="0dp"
         android:gravity="center"
         android:maxLines="3"
         android:padding="@dimen/padding_standard"
@@ -75,11 +92,12 @@
     <TextView
         android:id="@+id/memberLogin"
         style="@style/member_info"
-        app:layout_constraintBottom_toBottomOf="@id/memberCompany"
+        app:layout_constraintBottom_toTopOf="@id/memberCompany"
         app:layout_constraintStart_toStartOf="@+id/infoVerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/horizontalGuideline"
         app:layout_constraintVertical_chainStyle="packed"
-        tools:visibility="visible" />
+        tools:visibility="visible"
+        tools:text="username_value" />
 
     <TextView
         android:id="@+id/memberCompany"
@@ -88,15 +106,17 @@
         app:layout_constraintBottom_toBottomOf="@id/memberEmail"
         app:layout_constraintStart_toStartOf="@+id/infoVerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/memberLogin"
-        tools:visibility="visible" />
+        tools:visibility="visible"
+        tools:text="company_value" />
 
     <TextView
         android:id="@+id/memberEmail"
         style="@style/member_info"
-        app:layout_constraintBottom_toBottomOf="@id/memberType"
+        app:layout_constraintBottom_toTopOf="@id/memberType"
         app:layout_constraintStart_toStartOf="@+id/infoVerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/memberCompany"
-        tools:visibility="visible" />
+        tools:visibility="visible"
+        tools:text="email_value" />
 
     <TextView
         android:id="@+id/memberType"
@@ -104,26 +124,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/infoVerticalGuideline"
         app:layout_constraintTop_toBottomOf="@+id/memberEmail"
+        tools:text="type_value"
         tools:visibility="visible" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/colorAccent"
-        app:layout_constraintBottom_toTopOf="@+id/horizontalGuideline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:background="@color/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />
-
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/verticalGuideline"
